--- a/fillPaintMaster/BackCarViewController.xib
+++ b/fillPaintMaster/BackCarViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BackCarViewController">
@@ -23,31 +23,44 @@
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="car3" translatesAutoresizingMaskIntoConstraints="NO" id="uwu-Ho-Viv">
                             <rect key="frame" x="63" y="54" width="157" height="105"/>
-                            <animations/>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bPU-ZD-MZG">
-                            <rect key="frame" x="124" y="29" width="116" height="106"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="bB"/>
-                            <state key="selected" backgroundImage="bB0"/>
-                            <state key="highlighted" backgroundImage="bB0"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wUB-Ai-NUa">
-                            <rect key="frame" x="103" y="135" width="95" height="45"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="b1"/>
-                            <state key="selected" backgroundImage="b10"/>
-                            <state key="highlighted" backgroundImage="b10"/>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHD-nK-cKp">
-                            <rect key="frame" x="87" y="138" width="89" height="75"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="b2"/>
-                            <state key="selected" backgroundImage="b20"/>
+                            <rect key="frame" x="86" y="135" width="14" height="78"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
                             <state key="highlighted" backgroundImage="b20"/>
                         </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="后保险杠全喷" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w4K-gB-NC3">
+                            <rect key="frame" x="148" y="17" width="72" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wUB-Ai-NUa">
+                            <rect key="frame" x="183" y="134" width="14" height="49"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
+                            <state key="highlighted" backgroundImage="b10"/>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="左后保险杠" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lsm-kF-YZ6">
+                            <rect key="frame" x="103" y="192" width="72" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="右后保险杠" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IhF-wx-t0o">
+                            <rect key="frame" x="121" y="163" width="62" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bPU-ZD-MZG">
+                            <rect key="frame" x="131" y="21" width="14" height="112"/>
+                            <state key="normal" image="skbottom0"/>
+                            <state key="selected" image="skbottom1"/>
+                            <state key="highlighted" backgroundImage="bB0"/>
+                        </button>
                     </subviews>
-                    <animations/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="213" id="icY-Fq-gX6"/>
@@ -55,7 +68,6 @@
                     </constraints>
                 </view>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="8pY-PQ-Zff" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Rz6-4M-BKC"/>
@@ -65,12 +77,13 @@
         </view>
     </objects>
     <resources>
-        <image name="b1" width="150" height="82"/>
         <image name="b10" width="150" height="82"/>
-        <image name="b2" width="150" height="116"/>
         <image name="b20" width="150" height="116"/>
-        <image name="bB" width="150" height="187"/>
         <image name="bB0" width="150" height="187"/>
         <image name="car3" width="200" height="146"/>
+        <image name="skbottom0" width="14" height="126"/>
+        <image name="skbottom1" width="14" height="126"/>
+        <image name="sktop0" width="14" height="126"/>
+        <image name="sktop1" width="14" height="126"/>
     </resources>
 </document>
