--- a/fillPaintMaster/Base.lproj/Main.storyboard
+++ b/fillPaintMaster/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="141" y="25"/>
+            <point key="canvasLocation" x="353" y="-107"/>
         </scene>
         <!--Car Beauty View Controller-->
         <scene sceneID="BQ8-T8-hqD">
@@ -518,103 +518,64 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vHn-GV-bri">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qcj-Oy-k3e">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KcP-jB-rgU">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="37"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="大众途锐" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tvx-EY-T76">
-                                                <rect key="frame" x="120" y="7" width="80" height="24"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="80" id="SvT-j6-DfC"/>
-                                                    <constraint firstAttribute="height" constant="24" id="m9j-qm-G8X"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <color key="backgroundColor" red="0.95686274510000002" green="0.94901960780000005" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gMI-Qf-Fwf">
+                                        <rect key="frame" x="160" y="0.0" width="160" height="34"/>
+                                        <state key="normal" title="保险钣金">
+                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="selected" backgroundImage="btn_line">
+                                            <color key="titleColor" red="0.20567231850000001" green="0.7498171683" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <state key="highlighted" backgroundImage="btn_line">
+                                            <color key="titleColor" red="0.20567231850000001" green="0.7498171683" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wtl-QP-9gG">
+                                        <rect key="frame" x="0.0" y="0.0" width="160" height="34"/>
                                         <constraints>
-                                            <constraint firstItem="Tvx-EY-T76" firstAttribute="centerY" secondItem="KcP-jB-rgU" secondAttribute="centerY" id="4YA-Lg-OOX"/>
-                                            <constraint firstItem="Tvx-EY-T76" firstAttribute="centerX" secondItem="KcP-jB-rgU" secondAttribute="centerX" id="kos-WK-1nl"/>
-                                            <constraint firstAttribute="height" constant="37" id="tHh-SU-fMe"/>
+                                            <constraint firstAttribute="height" constant="34" id="b9F-ET-DfH"/>
                                         </constraints>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MAm-Dc-3BR">
-                                        <rect key="frame" x="0.0" y="36" width="320" height="512"/>
-                                        <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uvo-xj-Yu4">
-                                                <rect key="frame" x="0.0" y="30" width="320" height="482"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wtl-QP-9gG">
-                                                <rect key="frame" x="158" y="0.0" width="162" height="31"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="31" id="ElG-zs-4C3"/>
-                                                </constraints>
-                                                <state key="normal" title="保险钣金">
-                                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <state key="selected" backgroundImage="btn_line">
-                                                    <color key="titleColor" red="0.20567231850000001" green="0.7498171683" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                </state>
-                                                <state key="highlighted" backgroundImage="btn_line">
-                                                    <color key="titleColor" red="0.20567231850000001" green="0.7498171683" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                </state>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gMI-Qf-Fwf">
-                                                <rect key="frame" x="0.0" y="0.0" width="163" height="31"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="31" id="9ct-s6-8Gh"/>
-                                                </constraints>
-                                                <state key="normal" title="自费钣金">
-                                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <state key="selected" backgroundImage="btn_line">
-                                                    <color key="titleColor" red="0.20567231850000001" green="0.7498171683" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                </state>
-                                                <state key="highlighted" backgroundImage="btn_line">
-                                                    <color key="titleColor" red="0.20567231850000001" green="0.7498171683" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                </state>
-                                            </button>
-                                        </subviews>
+                                        <state key="normal" title="自费钣金">
+                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="selected" backgroundImage="btn_line">
+                                            <color key="titleColor" red="0.20567231850000001" green="0.7498171683" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <state key="highlighted" backgroundImage="btn_line">
+                                            <color key="titleColor" red="0.20567231850000001" green="0.7498171683" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uvo-xj-Yu4">
+                                        <rect key="frame" x="0.0" y="34" width="320" height="470"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <color key="tintColor" red="0.3782378106" green="0.36877617880000002" blue="0.40420484290000003" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="Wtl-QP-9gG" secondAttribute="trailing" id="0MW-Pb-6MN"/>
-                                            <constraint firstItem="Wtl-QP-9gG" firstAttribute="leading" secondItem="gMI-Qf-Fwf" secondAttribute="trailing" constant="-5" id="5fY-7I-jLA"/>
-                                            <constraint firstItem="Wtl-QP-9gG" firstAttribute="top" secondItem="MAm-Dc-3BR" secondAttribute="top" id="9Ll-Y4-Pfx"/>
-                                            <constraint firstItem="uvo-xj-Yu4" firstAttribute="leading" secondItem="MAm-Dc-3BR" secondAttribute="leading" id="SO6-QK-AyR"/>
-                                            <constraint firstAttribute="trailing" secondItem="uvo-xj-Yu4" secondAttribute="trailing" id="kof-9M-sdY"/>
-                                            <constraint firstAttribute="bottom" secondItem="uvo-xj-Yu4" secondAttribute="bottom" id="muv-wm-nRV"/>
-                                            <constraint firstItem="gMI-Qf-Fwf" firstAttribute="width" secondItem="Wtl-QP-9gG" secondAttribute="width" constant="1" id="qaw-x8-o71"/>
-                                            <constraint firstItem="uvo-xj-Yu4" firstAttribute="top" secondItem="gMI-Qf-Fwf" secondAttribute="bottom" constant="-1" id="tUE-7v-Xh8"/>
-                                            <constraint firstItem="gMI-Qf-Fwf" firstAttribute="top" secondItem="MAm-Dc-3BR" secondAttribute="top" id="uRM-8M-nfk"/>
-                                            <constraint firstItem="gMI-Qf-Fwf" firstAttribute="leading" secondItem="MAm-Dc-3BR" secondAttribute="leading" id="zlI-Il-7iT"/>
-                                        </constraints>
+                                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.71682453459999995" green="1" blue="0.60469191280000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="KcP-jB-rgU" secondAttribute="trailing" id="1EL-uI-vSk"/>
-                                    <constraint firstAttribute="trailing" secondItem="MAm-Dc-3BR" secondAttribute="trailing" id="Lss-tV-mai"/>
-                                    <constraint firstItem="KcP-jB-rgU" firstAttribute="top" secondItem="vHn-GV-bri" secondAttribute="top" id="Rvv-tb-Wlc"/>
-                                    <constraint firstItem="MAm-Dc-3BR" firstAttribute="top" secondItem="KcP-jB-rgU" secondAttribute="bottom" constant="-1" id="ZtU-kE-T9W"/>
-                                    <constraint firstAttribute="bottom" secondItem="MAm-Dc-3BR" secondAttribute="bottom" id="qJs-rv-eke"/>
-                                    <constraint firstItem="KcP-jB-rgU" firstAttribute="leading" secondItem="vHn-GV-bri" secondAttribute="leading" id="txJ-dA-vxv"/>
-                                    <constraint firstItem="MAm-Dc-3BR" firstAttribute="leading" secondItem="vHn-GV-bri" secondAttribute="leading" id="uFn-zS-kKV"/>
+                                    <constraint firstAttribute="bottom" secondItem="uvo-xj-Yu4" secondAttribute="bottom" id="7Nn-IH-N4v"/>
+                                    <constraint firstItem="gMI-Qf-Fwf" firstAttribute="leading" secondItem="Wtl-QP-9gG" secondAttribute="trailing" id="8aB-Cq-fGX"/>
+                                    <constraint firstAttribute="trailing" secondItem="uvo-xj-Yu4" secondAttribute="trailing" id="AvV-sD-Ou7"/>
+                                    <constraint firstItem="uvo-xj-Yu4" firstAttribute="leading" secondItem="Qcj-Oy-k3e" secondAttribute="leading" id="BPy-Ng-sHe"/>
+                                    <constraint firstItem="gMI-Qf-Fwf" firstAttribute="top" secondItem="Qcj-Oy-k3e" secondAttribute="top" id="Syk-n6-7az"/>
+                                    <constraint firstItem="Wtl-QP-9gG" firstAttribute="top" secondItem="Qcj-Oy-k3e" secondAttribute="top" id="ToL-HX-v9g"/>
+                                    <constraint firstItem="Wtl-QP-9gG" firstAttribute="leading" secondItem="Qcj-Oy-k3e" secondAttribute="leading" id="l5R-Y2-vOc"/>
+                                    <constraint firstItem="Wtl-QP-9gG" firstAttribute="width" secondItem="gMI-Qf-Fwf" secondAttribute="width" id="m43-N9-UZK"/>
+                                    <constraint firstItem="uvo-xj-Yu4" firstAttribute="top" secondItem="Wtl-QP-9gG" secondAttribute="bottom" id="n1s-7U-n0L"/>
+                                    <constraint firstAttribute="trailing" secondItem="gMI-Qf-Fwf" secondAttribute="trailing" id="rZj-Cr-jfA"/>
+                                    <constraint firstItem="Wtl-QP-9gG" firstAttribute="height" secondItem="gMI-Qf-Fwf" secondAttribute="height" id="sRK-su-5Qy"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="vHn-GV-bri" secondAttribute="trailing" id="HUO-cY-6k5"/>
-                            <constraint firstItem="vHn-GV-bri" firstAttribute="bottom" secondItem="pTD-Xd-1Cf" secondAttribute="top" id="RVu-w9-W7z"/>
-                            <constraint firstItem="vHn-GV-bri" firstAttribute="top" secondItem="xpU-1g-t7r" secondAttribute="bottom" id="fSe-q6-sUQ"/>
-                            <constraint firstItem="vHn-GV-bri" firstAttribute="leading" secondItem="SCu-uq-FK3" secondAttribute="leading" id="iEr-MY-Qgz"/>
+                            <constraint firstAttribute="trailing" secondItem="Qcj-Oy-k3e" secondAttribute="trailing" id="1Iq-a5-Xcq"/>
+                            <constraint firstItem="Qcj-Oy-k3e" firstAttribute="top" secondItem="SCu-uq-FK3" secondAttribute="top" constant="64" id="2x2-S8-EYx"/>
+                            <constraint firstItem="Qcj-Oy-k3e" firstAttribute="leading" secondItem="SCu-uq-FK3" secondAttribute="leading" id="CK2-av-48a"/>
+                            <constraint firstItem="Qcj-Oy-k3e" firstAttribute="bottom" secondItem="pTD-Xd-1Cf" secondAttribute="top" id="ndY-EA-3Sn"/>
                         </constraints>
                     </view>
                     <connections>
@@ -625,7 +586,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nUz-W6-krs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1964" y="-731"/>
+            <point key="canvasLocation" x="1637" y="-791"/>
         </scene>
         <!--Shop View Controller-->
         <scene sceneID="4eB-Bk-3M5">
@@ -820,23 +781,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pyh-XR-a4G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-689" y="361"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="Zds-Tw-kUg">
-            <objects>
-                <viewController id="uB9-jz-dBn" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="e7z-Jd-49q"/>
-                        <viewControllerLayoutGuide type="bottom" id="3aV-2B-fcr"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="SgM-WB-dLm">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tTR-Zx-gSx" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
         </scene>
     </scenes>
     <resources>
