--- a/fillPaintMaster/FrontCarViewController.xib
+++ b/fillPaintMaster/FrontCarViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FrontCarViewController">
@@ -23,31 +23,44 @@
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="car2" translatesAutoresizingMaskIntoConstraints="NO" id="B3f-LM-3kZ">
                             <rect key="frame" x="63" y="54" width="157" height="105"/>
-                            <animations/>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mzB-au-J3T">
-                            <rect key="frame" x="126" y="33" width="114" height="95"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="aA"/>
-                            <state key="selected" backgroundImage="aA0"/>
-                            <state key="highlighted" backgroundImage="aA0"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7Z-1A-WSn">
-                            <rect key="frame" x="85" y="136" width="86" height="54"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="a1"/>
-                            <state key="selected" backgroundImage="a10"/>
-                            <state key="highlighted" backgroundImage="a10"/>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKB-tH-7cg">
-                            <rect key="frame" x="101" y="136" width="93" height="37"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="a2"/>
-                            <state key="selected" backgroundImage="a20"/>
+                            <rect key="frame" x="179" y="136" width="14" height="54"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
                             <state key="highlighted" backgroundImage="a20"/>
                         </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="前保险杠全喷" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hu9-hM-GgP">
+                            <rect key="frame" x="148" y="15" width="72" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7Z-1A-WSn">
+                            <rect key="frame" x="86" y="132" width="14" height="69"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
+                            <state key="highlighted" backgroundImage="a10"/>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="左前保险杠" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Sg-r5-IJY">
+                            <rect key="frame" x="121" y="152" width="64" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="右前保险杠" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DHp-P4-XkF">
+                            <rect key="frame" x="107" y="184" width="64" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mzB-au-J3T">
+                            <rect key="frame" x="127" y="15" width="14" height="110"/>
+                            <state key="normal" image="skbottom0"/>
+                            <state key="selected" image="skbottom1"/>
+                            <state key="highlighted" backgroundImage="aA0"/>
+                        </button>
                     </subviews>
-                    <animations/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="213" id="NBO-Bc-h2t"/>
@@ -55,7 +68,6 @@
                     </constraints>
                 </view>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="oIv-Rr-bed" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="mrh-OV-N9L"/>
@@ -65,12 +77,13 @@
         </view>
     </objects>
     <resources>
-        <image name="a1" width="150" height="128"/>
         <image name="a10" width="150" height="128"/>
-        <image name="a2" width="150" height="77"/>
         <image name="a20" width="150" height="77"/>
-        <image name="aA" width="150" height="192"/>
         <image name="aA0" width="150" height="192"/>
         <image name="car2" width="200" height="147"/>
+        <image name="skbottom0" width="14" height="126"/>
+        <image name="skbottom1" width="14" height="126"/>
+        <image name="sktop0" width="14" height="126"/>
+        <image name="sktop1" width="14" height="126"/>
     </resources>
 </document>
