--- a/fillPaintMaster/LeftCarViewController.xib
+++ b/fillPaintMaster/LeftCarViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeftCarViewController">
@@ -25,45 +25,68 @@
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="car0" translatesAutoresizingMaskIntoConstraints="NO" id="cYm-hk-TYW">
                             <rect key="frame" x="18" y="47" width="246" height="81"/>
-                            <animations/>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u1m-Gk-8Ls">
-                            <rect key="frame" x="48" y="8" width="85" height="82"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="e1"/>
-                            <state key="selected" backgroundImage="e10"/>
-                            <state key="highlighted" backgroundImage="e10"/>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWJ-uY-0NR">
-                            <rect key="frame" x="36" y="109" width="86" height="86"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="c1"/>
-                            <state key="selected" backgroundImage="c10"/>
+                            <rect key="frame" x="35" y="101" width="14" height="75"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
                             <state key="highlighted" backgroundImage="c10"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q8b-O1-BNy">
-                            <rect key="frame" x="169" y="107" width="83" height="81"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="d1"/>
-                            <state key="selected" backgroundImage="d10"/>
+                            <rect key="frame" x="238" y="98" width="14" height="89"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
                             <state key="highlighted" backgroundImage="d10"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="twf-rA-98Q">
-                            <rect key="frame" x="105" y="107" width="70" height="51"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="j1"/>
-                            <state key="selected" backgroundImage="j10"/>
+                            <rect key="frame" x="157" y="101" width="14" height="57"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
                             <state key="highlighted" backgroundImage="j10"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lcP-OX-oze">
-                            <rect key="frame" x="167" y="8" width="85" height="82"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="f1"/>
-                            <state key="selected" backgroundImage="f10"/>
+                            <rect key="frame" x="170" y="10" width="14" height="84"/>
+                            <state key="normal" image="skbottom0"/>
+                            <state key="selected" image="skbottom1"/>
                             <state key="highlighted" backgroundImage="f10"/>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u1m-Gk-8Ls">
+                            <rect key="frame" x="104" y="10" width="40" height="83"/>
+                            <state key="normal" image="skbottom0"/>
+                            <state key="selected" image="skbottom1"/>
+                            <state key="highlighted" backgroundImage="e10"/>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="左前车门" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OFy-OJ-aTE">
+                            <rect key="frame" x="63" y="7" width="51" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="左后车门" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mhm-ZD-opf">
+                            <rect key="frame" x="192" y="7" width="68" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="左前翼子板" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQs-LV-6Ev">
+                            <rect key="frame" x="51" y="160" width="85" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="左裙边" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdF-dz-eQa">
+                            <rect key="frame" x="114" y="137" width="40" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="左后翼子板" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NA8-Ic-cf4">
+                            <rect key="frame" x="175" y="166" width="62" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
-                    <animations/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="283" id="Gqj-9y-2oE"/>
@@ -71,7 +94,6 @@
                     </constraints>
                 </view>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Hnq-5f-7ti" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="HbH-fd-XiS"/>
@@ -81,16 +103,15 @@
         </view>
     </objects>
     <resources>
-        <image name="c1" width="150" height="145"/>
         <image name="c10" width="150" height="145"/>
         <image name="car0" width="300" height="97"/>
-        <image name="d1" width="150" height="133"/>
         <image name="d10" width="150" height="133"/>
-        <image name="e1" width="150" height="163"/>
         <image name="e10" width="150" height="163"/>
-        <image name="f1" width="150" height="170"/>
         <image name="f10" width="150" height="170"/>
-        <image name="j1" width="150" height="109"/>
         <image name="j10" width="150" height="109"/>
+        <image name="skbottom0" width="14" height="126"/>
+        <image name="skbottom1" width="14" height="126"/>
+        <image name="sktop0" width="14" height="126"/>
+        <image name="sktop1" width="14" height="126"/>
     </resources>
 </document>
