--- a/fillPaintMaster/RightCarViewController.xib
+++ b/fillPaintMaster/RightCarViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RightCarViewController">
@@ -25,45 +25,68 @@
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="car1" translatesAutoresizingMaskIntoConstraints="NO" id="Q8q-aH-8hg">
                             <rect key="frame" x="8" y="71" width="267" height="81"/>
-                            <animations/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ENs-Qr-wBb">
-                            <rect key="frame" x="42" y="35" width="85" height="82"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="f2"/>
-                            <state key="selected" backgroundImage="f20"/>
+                            <rect key="frame" x="111" y="30" width="14" height="79"/>
+                            <state key="normal" image="skbottom0"/>
+                            <state key="selected" image="skbottom1"/>
                             <state key="highlighted" backgroundImage="f20"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gf4-T7-Hm3">
-                            <rect key="frame" x="152" y="34" width="85" height="82"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="e2"/>
-                            <state key="selected" backgroundImage="e20"/>
+                            <rect key="frame" x="154" y="32" width="14" height="78"/>
+                            <state key="normal" image="skbottom0"/>
+                            <state key="selected" image="skbottom1"/>
                             <state key="highlighted" backgroundImage="e20"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QCU-iM-nH2">
-                            <rect key="frame" x="41" y="128" width="86" height="86"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="d2"/>
-                            <state key="selected" backgroundImage="d20"/>
+                            <rect key="frame" x="42" y="128" width="14" height="67"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
                             <state key="highlighted" backgroundImage="d20"/>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1e-gG-TFf">
-                            <rect key="frame" x="168" y="130" width="83" height="81"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="c2"/>
-                            <state key="selected" backgroundImage="c20"/>
-                            <state key="highlighted" backgroundImage="c20"/>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sd6-0H-qIH">
-                            <rect key="frame" x="107" y="130" width="70" height="51"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="j2"/>
-                            <state key="selected" backgroundImage="j20"/>
+                            <rect key="frame" x="163" y="123" width="14" height="56"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
                             <state key="highlighted" backgroundImage="j20"/>
                         </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="右后车门" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GSK-cI-08q">
+                            <rect key="frame" x="60" y="25" width="48" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="右后翼子板" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibr-uk-B6X">
+                            <rect key="frame" x="60" y="184" width="60" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="右前车门" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5us-KV-tsJ">
+                            <rect key="frame" x="176" y="25" width="48" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1e-gG-TFf">
+                            <rect key="frame" x="238" y="128" width="14" height="75"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
+                            <state key="highlighted" backgroundImage="c20"/>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="左后翼子板" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qf7-k7-yHs">
+                            <rect key="frame" x="176" y="184" width="60" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="左裙边" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qcn-qL-bj9">
+                            <rect key="frame" x="118" y="155" width="37" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
-                    <animations/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="283" id="2OU-e2-X0e"/>
@@ -71,7 +94,6 @@
                     </constraints>
                 </view>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="xht-wt-dyP" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="4en-EC-ej6"/>
@@ -81,16 +103,15 @@
         </view>
     </objects>
     <resources>
-        <image name="c2" width="150" height="146"/>
         <image name="c20" width="150" height="146"/>
         <image name="car1" width="300" height="86"/>
-        <image name="d2" width="150" height="142"/>
         <image name="d20" width="150" height="142"/>
-        <image name="e2" width="150" height="161"/>
         <image name="e20" width="150" height="161"/>
-        <image name="f2" width="150" height="167"/>
         <image name="f20" width="150" height="167"/>
-        <image name="j2" width="150" height="107"/>
         <image name="j20" width="150" height="107"/>
+        <image name="skbottom0" width="14" height="126"/>
+        <image name="skbottom1" width="14" height="126"/>
+        <image name="sktop0" width="14" height="126"/>
+        <image name="sktop1" width="14" height="126"/>
     </resources>
 </document>
