--- a/fillPaintMaster/TopCarViewController.xib
+++ b/fillPaintMaster/TopCarViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopCarViewController">
@@ -23,31 +23,44 @@
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="car4" translatesAutoresizingMaskIntoConstraints="NO" id="jP6-p9-eSj">
                             <rect key="frame" x="18" y="47" width="246" height="95"/>
-                            <animations/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qn3-6G-bgi">
-                            <rect key="frame" x="32" y="114" width="78" height="63"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="hH"/>
-                            <state key="selected" backgroundImage="hH0"/>
+                            <rect key="frame" x="37" y="112" width="14" height="58"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
                             <state key="highlighted" backgroundImage="hH0"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zoS-MZ-GxL">
-                            <rect key="frame" x="150" y="115" width="84" height="48"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="gG"/>
-                            <state key="selected" backgroundImage="gG0"/>
+                            <rect key="frame" x="216" y="112" width="14" height="68"/>
+                            <state key="normal" image="sktop0"/>
+                            <state key="selected" image="sktop1"/>
                             <state key="highlighted" backgroundImage="gG0"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yzO-5x-ce3">
-                            <rect key="frame" x="70" y="22" width="62" height="74"/>
-                            <animations/>
-                            <state key="normal" backgroundImage="iI"/>
-                            <state key="selected" backgroundImage="iI0"/>
+                            <rect key="frame" x="111" y="4" width="14" height="93"/>
+                            <state key="normal" image="skbottom0"/>
+                            <state key="selected" image="skbottom1"/>
                             <state key="highlighted" backgroundImage="iI0"/>
                         </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="车顶" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C3s-Vo-VQs">
+                            <rect key="frame" x="127" y="0.0" width="42" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="后车盖" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ob-tU-HX5">
+                            <rect key="frame" x="53" y="157" width="42" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="前车盖" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWH-b6-BsL">
+                            <rect key="frame" x="174" y="159" width="42" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
-                    <animations/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="213" id="AI2-m5-4IG"/>
@@ -55,7 +68,6 @@
                     </constraints>
                 </view>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="TJ7-9l-ds9" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="1Ov-cd-Fcq"/>
@@ -66,11 +78,12 @@
     </objects>
     <resources>
         <image name="car4" width="300" height="136"/>
-        <image name="gG" width="150" height="144"/>
         <image name="gG0" width="150" height="144"/>
-        <image name="hH" width="150" height="232"/>
         <image name="hH0" width="150" height="232"/>
-        <image name="iI" width="150" height="326"/>
         <image name="iI0" width="150" height="326"/>
+        <image name="skbottom0" width="14" height="126"/>
+        <image name="skbottom1" width="14" height="126"/>
+        <image name="sktop0" width="14" height="126"/>
+        <image name="sktop1" width="14" height="126"/>
     </resources>
 </document>
