--- a/fillPaintMaster/MyOrderTableViewCell.xib
+++ b/fillPaintMaster/MyOrderTableViewCell.xib
@@ -8,15 +8,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyOrderTableViewCell" rowHeight="138" id="KGk-i7-Jjw" customClass="MyOrderTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="333" height="138"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyOrderTableViewCell" rowHeight="160" id="KGk-i7-Jjw" customClass="MyOrderTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="333" height="160"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="333" height="137"/>
+                <rect key="frame" x="0.0" y="0.0" width="333" height="159"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homepage_gridview_8" translatesAutoresizingMaskIntoConstraints="NO" id="JsE-04-3IP">
-                        <rect key="frame" x="13" y="34" width="69" height="69"/>
+                        <rect key="frame" x="13" y="45" width="69" height="69"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="69" id="N7s-OW-6UP"/>
                             <constraint firstAttribute="width" constant="69" id="XMi-0X-C2n"/>
@@ -33,7 +33,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已完成" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6M-xh-QFz">
-                        <rect key="frame" x="225" y="58" width="100" height="21"/>
+                        <rect key="frame" x="225" y="69" width="100" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="aoA-hO-BQZ"/>
                             <constraint firstAttribute="width" constant="100" id="vfn-uE-j9r"/>
@@ -63,7 +63,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="创建时间：2016-04-09 12:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zA0-qe-7hP">
-                        <rect key="frame" x="13" y="108" width="219" height="21"/>
+                        <rect key="frame" x="13" y="130" width="219" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="219" id="a8n-Q2-KZO"/>
                             <constraint firstAttribute="height" constant="21" id="g8v-zg-JzY"/>
@@ -73,7 +73,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsO-lD-Z8x">
-                        <rect key="frame" x="251" y="99" width="70" height="30"/>
+                        <rect key="frame" x="251" y="121" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="byV-Kl-lrt"/>
                             <constraint firstAttribute="height" constant="30" id="kFZ-ti-Lde"/>
@@ -93,11 +93,22 @@
                             <color key="titleColor" red="1" green="0.086905940030000003" blue="0.1042415129" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rti-Wf-bZ9">
+                        <rect key="frame" x="13" y="112" width="205" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="qta-ri-rlg"/>
+                            <constraint firstAttribute="width" constant="205" id="qzd-pk-c7g"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <color key="textColor" red="0.38908743351063835" green="0.38908743351063835" blue="0.38908743351063835" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="JsE-04-3IP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="1xm-IF-vSZ"/>
                     <constraint firstAttribute="trailingMargin" secondItem="1kj-63-oC3" secondAttribute="trailing" constant="4" id="54f-Rw-6Nq"/>
                     <constraint firstItem="TJa-yL-YWJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="CO2-fM-G0Q"/>
+                    <constraint firstItem="rti-Wf-bZ9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="Dyu-oH-IEf"/>
                     <constraint firstItem="zA0-qe-7hP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="Kp1-Xh-WSC"/>
                     <constraint firstItem="JsE-04-3IP" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="MJ0-Ps-3br"/>
                     <constraint firstItem="odB-Mo-OAM" firstAttribute="top" secondItem="WCv-X9-cIW" secondAttribute="bottom" constant="27" id="OIl-4G-pFJ"/>
@@ -110,6 +121,7 @@
                     <constraint firstItem="TJa-yL-YWJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="jvC-oh-EzP"/>
                     <constraint firstItem="B6M-xh-QFz" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="oNK-QA-Ha1"/>
                     <constraint firstItem="zA0-qe-7hP" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="rCc-9u-qBC"/>
+                    <constraint firstItem="rti-Wf-bZ9" firstAttribute="top" secondItem="odB-Mo-OAM" secondAttribute="bottom" constant="13" id="rCd-Iu-EU9"/>
                     <constraint firstItem="1kj-63-oC3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="zmq-jU-0gT"/>
                 </constraints>
             </tableViewCellContentView>
@@ -120,10 +132,11 @@
                 <outlet property="nameLabel" destination="TJa-yL-YWJ" id="P0A-TT-vZB"/>
                 <outlet property="numLabel" destination="WCv-X9-cIW" id="2ry-Pu-go2"/>
                 <outlet property="payButton" destination="1kj-63-oC3" id="E3W-1f-nSJ"/>
+                <outlet property="shopNameLabel" destination="rti-Wf-bZ9" id="Q4s-7Y-zJi"/>
                 <outlet property="statusLabel" destination="B6M-xh-QFz" id="Naq-c3-fYT"/>
                 <outlet property="totalPriceLabel" destination="odB-Mo-OAM" id="uL2-cO-AZa"/>
             </connections>
-            <point key="canvasLocation" x="235.5" y="260"/>
+            <point key="canvasLocation" x="235.5" y="271"/>
         </tableViewCell>
     </objects>
     <resources>
